Brought in images directory

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 				<!-- Separate our unordered list blocks to show a left and right side to our nav. Apply classes to spread styling to both and either specifically -->
 				<ul class="nav nav-left">
 					<!-- Add item class to bring styling specifically to nav list items -->
-					<li class="item shoe-icon"></li>
+					<li class="item">
+						<img class="shoe-icon" src="./images/day-1-logo.jpg" alt="brand logo" />
+					</li>
 					<li class="item">Mens</li>
 					<li class="item">Womens</li>
 					<li class="item">Boys</li>
@@ -31,7 +33,9 @@
 
 		<!-- Set the Main Content section -->
 		<main>
-
+			<div class="main-shoe">
+				<img src="https://raw.githubusercontent.com/ccs-foundations/foundations-front-end-engineering/master/assignments/images/day-1-shoe1.png" />
+			</div>
 		</main>
 
 		<!-- Set the footer section -->
