Intro to javascript Carolina Code School Foundations

--- a/index.html
+++ b/index.html
@@ -30,17 +30,21 @@
 				</ul>
 			</div>
 		</header>
-
+		<section id="product-banner">
+			<div class="main-shoe">
+				<img
+				 src="./images/day-1-shoe1.png" />
+			</div>
+		</section>
 		<!-- Set the Main Content section -->
 		<main>
-			<div class="main-shoe">
-				<img src="https://raw.githubusercontent.com/ccs-foundations/foundations-front-end-engineering/master/assignments/images/day-1-shoe1.png" />
-			</div>
+
 		</main>
 
 		<!-- Set the footer section -->
 		<footer>
 
 		</footer>
+		<script src="main.js"></script>
 	</body>
 </html>
