Javascript object, array, and function introduction

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			<!-- Wrap our left and right nav elements in a block element, give unique id for styling use -->
 			<div id="nav">
 				<!-- Separate our unordered list blocks to show a left and right side to our nav. Apply classes to spread styling to both and either specifically -->
+				<div class="item">Hello</div>
 				<ul class="nav nav-left">
 					<!-- Add item class to bring styling specifically to nav list items -->
 					<li class="item">
